--- a/P010611.opf/meta.yml
+++ b/P010611.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010611
+id: P010611
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W30191
   title: འདུལ་བའི་གླེང་འབུམ
-  volume: ''
   author: ''
+  volumes: {}
