--- a/P010611.opf/meta.yml
+++ b/P010611.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W30191
   title: འདུལ་བའི་གླེང་འབུམ
   author: ''
-  volumes: {}
+  volumes:
+    d9db6a445c3048f3ae30905ea313daf5:
+      image_group_id: I6460
+      title: ''
+      volume_number: 1
+      total_pages: 1128
