--- a/P010611.opf/layers/v001/Pagination.yml
+++ b/P010611.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 5b2e3a3522cf4d7187dc59ff81d4a712
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   3be7245fb21f4a458f83784b5ae56030:
