--- a/P010611.opf/meta.yml
+++ b/P010611.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P010611
 initial_creation_type: ocr
 created_at: 29/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-20 10:16:26.348672
 source_metadata:
   id: bdr:W30191
   title: འདུལ་བའི་གླེང་འབུམ
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 1128
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
